<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_second_activityName_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:padding="20dp"
        android:text="@string/activity_2"/>
    <TextView
        android:id="@+id/activity_main_greeting_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#62FF00"
        android:padding="20dp"
        android:text="Welcome! what's your name?"/>

    <EditText
        android:id="@+id/activity_main_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Please type your name"/>

    <Button
        android:id="@+id/activity_second_toFirst_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/to_first"
        android:padding="30dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/activity_second_toThird_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/to_third"
        android:padding="30dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>