<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_first_activityName_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3C6A3A"
        android:padding="20dp"
        android:text="@string/activity_1"/>

    <Button
        android:id="@+id/activity_first_toSecond_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/to_second"
        android:padding="30dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>