<resources>
    <string name="app_name">Lab3</string>
    <string name="to_second">to second</string>
    <string name="to_first">to first</string>
    <string name="to_third">to third</string>
    <string name="about">About</string>
    <string name="here_s_about">Here\'s About</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
    <string name="activity_1">Activity 1</string>
    <string name="a">A</string>
    <string name="c">B</string>
    <string name="d">C</string>
    <string name="activity_4">Activity 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="welcome_what_s_your_name">Welcome! what\'s your name?</string>
    <string name="please_type_your_name">Please type your name</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="won">You Won</string>

</resources>